[package]
authors = ["Threkork <threkork@hotmail.com>"]
description = "Kovi 的 Napcat Api拓展。"
edition = "2021"
keywords = [
    "kovi",
    "kovi-plugin",
    "kovi-plugin-expand",
    "kovi-expand",
    "napcat",
]
license = "MPL-2.0"
name = "kovi-plugin-expand-napcat"
repository = "https://github.com/Threkork/kovi-plugin/"
version = "0.3.1"

[dependencies]
kovi = ">= 0.8.4"
serde = "1"
