[package]
authors = ["ThriceCola <thricecola@hotmail.com>"]
description = "Kovi 的 Napcat Api拓展。"
edition = "2024"
keywords = [
    "kovi",
    "kovi-plugin",
    "kovi-plugin-expand",
    "kovi-expand",
    "napcat",
]
license = "MPL-2.0"
name = "kovi-plugin-expand-napcat"
repository = "https://github.com/Threkork/kovi-plugin/"
version = "0.4.0"

[dependencies]
kovi = ">= 0.12"
serde = "1"
